<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
>
    <com.elong.tourpal.ui.views.CommonTitleBar
        android:id="@+id/login_titlebar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50dp"
        android:lines="1"
        android:layout_marginLeft="@dimen/size_15dp"
        android:layout_marginRight="@dimen/size_15dp"
        android:hint="@string/login_account_hint"
    />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50dp"
        android:lines="1"
        android:layout_marginLeft="@dimen/size_15dp"
        android:layout_marginRight="@dimen/size_15dp"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
    />

    <TextView
        android:id="@+id/add_new_account"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_30dp"
        android:gravity="right"
        android:textColor="@color/flamingo"
        android:text="@string/login_add_new_account"
        android:layout_gravity="right"
        android:layout_marginLeft="@dimen/size_15dp"
        android:layout_marginRight="@dimen/size_15dp"
    />

    <include
        android:id="@+id/item_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_54dp"
        android:layout_marginTop="@dimen/size_20dp"
        layout="@layout/item_login_button"
        android:layout_marginLeft="@dimen/size_15dp"
        android:layout_marginRight="@dimen/size_15dp"
    />


</LinearLayout>